--- a/cargo-summary.html
+++ b/cargo-summary.html
@@ -139,5 +139,14 @@
 
     renderReportText();
   </script>
+<!-- Supabase Client -->
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script>
+  const supabase = createClient(
+    'https://YOUR_PROJECT_ID.supabase.co',
+    'YOUR_ANON_KEY'
+  );
+</script>
+
 </body>
 </html>
