--- a/final-load.html
+++ b/final-load.html
@@ -258,5 +258,14 @@ function applyEdit(uldNo, index) {
   }
 </script>
 
+<!-- Supabase Client -->
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script>
+  const supabase = createClient(
+    'https://YOUR_PROJECT_ID.supabase.co',
+    'YOUR_ANON_KEY'
+  );
+</script>
+
 </body>
 </html>
