--- a/final-load.html
+++ b/final-load.html
@@ -235,7 +235,7 @@
       const origin = "DMK";
       const destination = "CGK";
       const flightDate = `${year}-${monthTextToNumber(monthText)}-${day.padStart(2, '0')}`;
-      const stdTime = std || "00:00:00";
+      const stdTime = "00:00:00";
 
       const flightRes = await supabase.from("flights").insert({
         flight_no: flight,
